--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
 
-    <script src="{{url_for('static', filename='js/centrale.js')}}" type="text/javascript"></script>
+    {% block wdcscript %}
+    {% endblock %}
 </head>
 
 <body>
