--- a/app/templates/last.html
+++ b/app/templates/last.html
@@ -2,3 +2,13 @@
 {% block wdcscript %}
 <script src="{{url_for('static', filename='js/centrale_last.js')}}" type="text/javascript"></script>
 {% endblock %}
+
+{% block content %}
+<div class="container container-table">
+  <div class="row vertical-center-row">
+    <div class="text-center col-md-4 col-md-offset-4">
+      <button type="button" id="submitButton" class="btn btn-success" style="margin: 10px;">Get Data!</button>
+    </div>
+  </div>
+</div>
+{% endblock %}
