--- a/app/templates/ib_eod_transactions.html
+++ b/app/templates/ib_eod_transactions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block wdcscript %}
-<script src="{{url_for('static', filename='js/ib_crncy_expo.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/ib_eod_transactions.js')}}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
